--- a/admin.html
+++ b/admin.html
@@ -80,10 +80,19 @@
       </div>
 
       <div>
-        <label>Obrázok (cesta)</label>
-        <input type="text" id="obrazok" placeholder="img/subarubrz2024.avif"/>
-        <div class="preview" id="imgPreview"><small class="hint">Náhľad sa zobrazí po vyplnení poľa.</small></div>
-      </div>
+  <label>Obrázok (URL alebo nahrať)</label>
+  <div class="row">
+    <input type="text" id="obrazok" placeholder="URL obrázka (vyplní sa po nahratí)"/>
+    <div>
+      <input type="file" id="fileInput" accept="image/*" />
+      <button class="btnx" type="button" id="uploadBtn">Nahrať</button>
+    </div>
+  </div>
+  <div class="preview" id="imgPreview">
+    <small class="hint">Vyber súbor a klikni „Nahrať“, alebo vlož priamy URL.</small>
+  </div>
+</div>
+
 
       <div>
         <label>Tagy (čiarkou oddelené)</label>
@@ -335,5 +344,70 @@
       onDelete(idx);
     }
   </script>
+  <script>
+  // premeni File na čisté base64 (bez data: prefixu)
+  function fileToBase64(file) {
+    return new Promise((resolve, reject) => {
+      const reader = new FileReader();
+      reader.onerror = () => reject(new Error('Nepodarilo sa načítať súbor.'));
+      reader.onload = () => {
+        const result = reader.result; // data:*;base64,xxxx
+        const base64 = String(result).split(',')[1]; // odstrániť "data:...;base64,"
+        resolve(base64);
+      };
+      reader.readAsDataURL(file);
+    });
+  }
+
+  async function uploadSelectedFile() {
+    const input = document.getElementById('fileInput');
+    if (!input.files || !input.files[0]) {
+      alert('Najprv vyber súbor.');
+      return;
+    }
+    const file = input.files[0];
+
+    // voliteľne: limit veľkosti, napr. 10 MB
+    if (file.size > 10 * 1024 * 1024) {
+      alert('Súbor je príliš veľký (max 10 MB).');
+      return;
+    }
+
+    const base64 = await fileToBase64(file);
+
+    // pošli do /api/upload-image
+    const res = await fetch('/api/upload-image', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({
+        filename: file.name,
+        contentBase64: base64
+      })
+    });
+
+    if (!res.ok) {
+      const t = await res.text();
+      console.error('Upload failed:', t);
+      alert('Nahratie zlyhalo. Pozri konzolu.');
+      return;
+    }
+
+    const data = await res.json();
+    // vyplň URL do poľa, ukáž náhľad
+    form.obrazok.value = data.url;
+    renderPreview();
+  }
+
+  // event handlery:
+  document.getElementById('uploadBtn').addEventListener('click', uploadSelectedFile);
+  document.getElementById('fileInput').addEventListener('change', () => {
+    // po výbere súboru zobraz lokálny náhľad (pred uploadom)
+    const input = document.getElementById('fileInput');
+    if (!input.files || !input.files[0]) return;
+    const url = URL.createObjectURL(input.files[0]);
+    imgPreview.innerHTML = `<img src="${url}" alt="náhľad">`;
+  });
+</script>
+
 </body>
 </html>
